Added AquaMine organisms to organism_config.properties and display toggle for taxonomy tab

--- a/dbmodel/resources/organism_config.properties
+++ b/dbmodel/resources/organism_config.properties
@@ -1,6 +1,85 @@
 # Additions to species list for our mines
 # Copy built-in version then place these additions at the top for the correct mine:
 
+# AquaMine species not included in default list
+
+taxon.6454.genus=Haliotis
+taxon.6454.species=rufescens
+taxon.6565.genus=Crassostrea
+taxon.6565.species=virginica
+taxon.6596.genus=Mercenaria
+taxon.6596.species=mercenaria
+taxon.6687.genus=Penaeus
+taxon.6687.species=monodon
+taxon.6689.genus=Penaeus
+taxon.6689.species=vannamei
+taxon.6706.genus=Homarus
+taxon.6706.species=americanus
+taxon.6728.genus=Procambarus
+taxon.6728.species=clarkii
+taxon.7918.genus=Lepisosteus
+taxon.7918.species=oculatus
+taxon.7950.genus=Clupea
+taxon.7950.species=harengus
+taxon.7955.genus=Danio
+taxon.7955.species=rerio
+taxon.7994.genus=Astyanax
+taxon.7994.species=mexicanus
+taxon.7998.genus=Ictalurus
+taxon.7998.species=punctatus
+taxon.8010.genus=Esox
+taxon.8010.species=lucius
+taxon.8017.genus=Oncorhynchus
+taxon.8017.species=gorbuscha
+taxon.8018.genus=Oncorhynchus
+taxon.8018.species=keta
+taxon.8019.genus=Oncorhynchus
+taxon.8019.species=kisutch
+taxon.8022.genus=Oncorhynchus
+taxon.8022.species=mykiss
+taxon.8023.genus=Oncorhynchus
+taxon.8023.species=nerka
+taxon.8030.genus=Salmo
+taxon.8030.species=salar
+taxon.8049.genus=Gadus
+taxon.8049.species=morhua
+taxon.8128.genus=Oreochromis
+taxon.8128.species=niloticus
+taxon.8167.genus=Perca
+taxon.8167.species=flavescens
+taxon.8245.genus=Xiphias
+taxon.8245.species=gladius
+taxon.8267.genus=Hippoglossus
+taxon.8267.species=hippoglossus
+taxon.9606.genus=Homo
+taxon.9606.species=sapiens
+taxon.27706.genus=Micropterus
+taxon.27706.species=salmoides
+taxon.29159.genus=Crassostrea
+taxon.29159.species=gigas
+taxon.34816.genus=Morone
+taxon.34816.species=saxatilis
+taxon.41447.genus=Seriola
+taxon.41447.species=dumerili
+taxon.48193.genus=Mugil
+taxon.48193.species=cephalus
+taxon.59861.genus=Coregonus
+taxon.59861.species=clupeaformis
+taxon.74940.genus=Oncorhynchus
+taxon.74940.species=tshawytscha
+taxon.195615.genus=Hippoglossus
+taxon.195615.species=stenolepis
+taxon.225164.genus=Lottia
+taxon.225164.species=gigantea
+taxon.417921.genus=Etheostoma
+taxon.417921.species=cragini
+taxon.481459.genus=Gasterosteus
+taxon.481459.species=aculeatus
+taxon.1841481.genus=Seriola
+taxon.1841481.species=dorsalis
+taxon.2691554.genus=Salvelinus
+taxon.2691554.species=sp. IW2-2015
+
 # FAANGMine species not included in default list
 
 taxon.89462.species = bubalis
