--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -189,6 +189,9 @@ you can save lists permanently.
 blast.display = false
 blast.url = 
 
+# Taxonomy
+taxonomy.display = false
+
 # Genomic Region Search
 genomicRegionSearch.display = true
 genomicRegionSearch.service =
