--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -207,6 +207,8 @@ genomicRegionSearch.defaultOrganisms = <DEFAULT SHORT NAME HERE>
 genomicRegionSearch.featureTypesExcluded.global = CodingSequence, Polypeptide
 # Exclude feature types for each specific organism
 #genomicRegionSearch.featureTypesExcluded.byOrganism = P. falciparum 3D7:YouNameItClass;
+# Exclude all feature types for specified organisms, comma separated
+genomicRegionSearch.organismsExcluded =
 genomicRegionSearch.defaultSpans = LG1:4973300..4990880\\nLG1:6704800..6726950\\nLG3:5078530..5082200
 genomicRegionSearch.exampleSpansFormat1 = LG1:4973300..4990880\\nLG1:6704800..6726950\\nLG3:5078530..5082200
 genomicRegionSearch.exampleSpansFormat2 = LG1:4973300-4990880\\nLG1:6704800-6726950\\nLG3:5078530-5082200
