Added webapp config for AquaMine expression/experiment

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -47,8 +47,8 @@ attributelink.OrthoDB.Homologue.*.clusterId.url=https://www.orthodb.org/?query=<
 attributelink.OrthoDB.Homologue.*.clusterId.text=OrthoDB: <<attributeValue>>
 attributelink.OrthoDB.OrthologueCluster.*.primaryIdentifier.url=https://www.orthodb.org/?query=<<attributeValue>>
 attributelink.OrthoDB.OrthologueCluster.*.primaryIdentifier.text=OrthoDB: <<attributeValue>>
-# OrthoDB (HymenopteraMine version):
-# HymenopteraMine uses separate field orthoDbCluster since it also loads HGD-ortho
+# OrthoDB (AquaMine/HymenopteraMine version):
+# AquaMine and HymenopteraMine use separate field orthoDbCluster since they also load AquaMine-Ortho/HGD-Ortho
 attributelink.OrthoDB.Homologue.*.orthoDbCluster.url=https://www.orthodb.org/?query=<<attributeValue>>
 attributelink.OrthoDB.Homologue.*.orthoDbCluster.text=OrthoDB: <<attributeValue>>
 attributelink.OrthoDB.OrthologueCluster.*.orthoDbCluster.url=https://www.orthodb.org/?query=<<attributeValue>>
