Added webapp config for TranscriptionFactors

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -78,6 +78,7 @@ sraSubmission=SRA Submission
 submissionDescriptionUberonId=Submission Description UBERON ID
 synonymUberonId=Synonym UBERON ID
 TFmodule=TF module
+tfName = TF name
 traitId=Trait ID
 uberonId=UBERON ID
 uberonName=UBERON Name
