--- a/dbmodel/resources/class_keys.properties
+++ b/dbmodel/resources/class_keys.properties
@@ -12,6 +12,7 @@ BioSample = bioSampleId
 Consequence = snpId
 DataSet = name
 DataSource = name
+Entity = name
 Experiment = experimentId
 Expression = entityName
 InteractionExperiment = name, publication
@@ -22,6 +23,7 @@ Publication = pubMedId
 Protein = primaryAccession
 SequenceFeature = symbol, name
 Transcript = primaryIdentifier
+TranscriptionFactor = tfName
 
 # keys used to generate permanent navigable URL and URI
 # primaryIdentifier is used as default values
@@ -31,6 +33,7 @@ BioSample_URI = bioSampleId
 Consequence_URI = snpId
 DataSet_URI = name
 DataSource_URI = name
+Entity_URI = name
 Experiment_URI = experimentId
 Expression_URI = entityName
 OntologyTerm_URI = identifier
@@ -38,3 +41,4 @@ Organism_URI = taxonId
 Pathway_URI = identifier
 Protein_URI = primaryAccession
 Publication_URI = pubMedId
+TranscriptionFactor_URI = tfName
