--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -10,6 +10,7 @@ btoAllLevels=BTO All Levels
 btoId=BTO ID
 btoName=BTO Name
 btoTopLevel=BTO Top Level
+B73v3SNP=B73v3 SNP
 cDNAClones=cDNA clones
 CDSs=CDSs
 cellTypeClId=Cell Type CL ID
@@ -47,6 +48,8 @@ mrna=mRNA
 mRNAExpressionResults=mRNA Expression Results
 mRNAExpressionTerms=mRNA Expression Terms
 ncbiGeneNumber=NCBI Gene Number
+negativeLog10pValue=Negative log10 p-value
+negativeLog10qValue=Negative log10 q-value
 organismPartUberonId=Organism Part UBERON ID
 organismPartUberonName=Organism Part UBERON Name
 orthoDbCluster=OrthoDB Cluster
@@ -56,7 +59,8 @@ physiologicalConditionOwlatolId=Physiological Condition owlATOL ID
 poName = Plant Ontology Term
 ptoName=PTO Name
 pubMedId=PubMed ID
-Pvalue=P-value
+Pvalue=p-value
+pValue=p-value
 qTellerId = qTeller ID
 qtlId=QTL ID
 rnaiResults=RNAi Results
@@ -65,6 +69,7 @@ sexPatoId=Sex PATO ID
 SNPs=SNPs
 SNVs=SNVs
 snpId=SNP ID
+snpsAsFlankMarkers=SNPs as Flank Markers
 sraBioProjectId = SRA BioProject ID
 sraBioSampleId = SRA BioSample ID
 sraExperimentId = SRA Experiment ID
