Updated Maize Expression Metadata loader to ignore header line, added human readable field name for NAM Line in webapp

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -47,6 +47,7 @@ miRNATargets=miRNA Targets
 mrna=mRNA
 mRNAExpressionResults=mRNA Expression Results
 mRNAExpressionTerms=mRNA Expression Terms
+namLine=NAM Line
 ncbiGeneNumber=NCBI Gene Number
 negativeLog10pValue=Negative log10 p-value
 negativeLog10qValue=Negative log10 q-value
