Added GplusE loaders for BovineMine

--- a/dbmodel/resources/class_keys.properties
+++ b/dbmodel/resources/class_keys.properties
@@ -21,6 +21,7 @@ Organism = name, shortName, taxonId
 Pathway = identifier
 Publication = pubMedId
 Protein = primaryAccession
+Reaction = identifier
 SequenceFeature = symbol, name
 Transcript = primaryIdentifier
 TranscriptionFactor = tfName
@@ -41,4 +42,5 @@ Organism_URI = taxonId
 Pathway_URI = identifier
 Protein_URI = primaryAccession
 Publication_URI = pubMedId
+Reaction_URI = identifier
 TranscriptionFactor_URI = tfName
