Added more human-readable labels for intermine field names

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -77,9 +77,11 @@ sraExperimentId = SRA Experiment ID
 sraMetadata = SRA Metadata
 sraRunId = SRA Run ID
 sraSample=SRA Sample
+sraSampleAccession = SRA Sample Accession
 sraSampleId = SRA Sample ID
 sraStudyId = SRA Study ID
 sraStudy=SRA Study
+sraStudyAccession = SRA Study Accession
 sraSubmission=SRA Submission
 submissionDescriptionUberonId=Submission Description UBERON ID
 synonymUberonId=Synonym UBERON ID
