--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -12,6 +12,11 @@
 #     attribute/organism/class combination
 # 5. logo images should be located in bio/webapp/resources/webapp/model/images/
 
+# Publications - link to pubmed site instead of report page
+webapp.linkRedirect=org.intermine.bio.web.BioLinkRedirectManager
+externallink.pubMedIds.Publication.*.pubMedId.url = https://www.ncbi.nlm.nih.gov/pubmed/<<attributeValue>>
+externallink.pubMedIds.Publication.*.doi.url = https://doi.org/<<attributeValue>>
+
 attributelink.PubMed.Publication.*.pubMedId.url=https://www.ncbi.nlm.nih.gov/pubmed/<<attributeValue>>
 attributelink.PubMed.Publication.*.pubMedId.text=PMID: <<attributeValue>>
 attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
