Added some QTL fields

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -88,6 +88,7 @@ synonymUberonId=Synonym UBERON ID
 TFmodule=TF module
 tfName = TF name
 traitId=Trait ID
+traitReprtNM=Trait Reprt NM
 uberonId=UBERON ID
 uberonName=UBERON Name
 uniprotAccession=UniProt Accession
